# DerangedWario

./: LICENSE  README.md  pyproject.toml  suave_wario.md  wario_growth_quine.py  wario_quine.py
img/: res_note.md
